--- a/css/theme.css
+++ b/css/theme.css
@@ -1,8 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Poiret+One|Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Roboto|Arvo);
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 
 body {
 	padding-top:20px;
 	padding-bottom: 0px;
+	font-family: 'Roboto', sans-serif;
 	background-image: url(https://abs.twimg.com/images/themes/theme1/bg.png);
 	background-attachment: fixed;
 	background-repeat: repeat;
@@ -10,157 +12,47 @@ body {
 	background-color: #C0DEED;
 }
 
-/* Custom container */
-.container-narrow {margin: 0 auto;max-width: 700px;}
-.container-narrow > hr {margin: 30px 0;}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-	margin: 60px 0 0px;
-	text-align: center;
-	padding: 0;
-	background:url('../img/bg.jpg') repeat center center;
-/*	opacity:0.9;
-*/	color:#fff;
-	background: none;
-}
-.jumbotron h1 {
-	font-size: 72px;
-	line-height: 1;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	color: rgb(81, 142, 169);
-	font-weight: bold;
-}
-.jumbotron .btn {font-size: 21px;padding: 14px 24px;}
-
-.controls textarea{width:70%;}
-img.timeline{float: left;margin: 1%;padding: 0%;}
-
-.timeline-tweets{
-	margin-bottom:0.5%;
-	background:#fff;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+.tweet-div{
 	color: #000;
 	text-align: left;
+	padding: 10px;
+	border-bottom: 1px solid #C0DEED;
+	background-color: white;
 }
 
-.timeline-tweets a{
+.tweet-div img{
+	float: left;
+	margin: 5px 15px 5px 5px;
+	padding: 0%;
+	width: 50px;
+}
+
+.tweet-div a{
+	font-weight: 200;
 	color: rgb(142, 193, 218);
 }
 
-.timeline-tweets a:hover{
-	text-decoration:underline;
+.tweet-div a:hover{
+	text-decoration: none;
 }
 
-.timeline-tweets p{
-	padding-top:0.5%;
-	margin:0%;
-	font-weight:bold;
+.tweet-div p{
+	padding-top: 0.5%;
+	margin: 0%;
+	font-size: 12px;
 }
 
-.timeline-close{float: right;padding-right: 1%;}
-.charCount{margin-left:67%;}
-.tweet-controls{text-align:right;width:100%;padding:0% 1%;}
-.tweet-controls a{}
-a:hover{text-decoration:none;}
-
-.head-text-big{
-	font-size: 30px;
-	font-weight: bold;
-	color: white;
+.info-icon{
+	font-size: 13px;
+	border-right: 2px solid #C0DEED;
+	padding-right: 10px;
+	margin-right: 10px;
 }
 
-.no-tweets-text{
-	font-weight: bold;
-	color: rgb(81, 142, 169);
-	font-size: 21px;
+.info-icon:last-child{
+	border-right: none;
 }
 
-.social-connect-butt{
-	font-size:32px;
-	color:rgba(255, 255, 255, 0.95);
-	margin: 0 -2px;
-	padding:10px 13px;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    -ms-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s; 	
+.info-icon i{
+	font-size: 13px;
 }
-
-.not-phone-social-animate a:hover .social-connect-butt{
-	padding-left:35px;
-}
-
-#tw .social-connect-butt {background-color:#00aced;}
-#fb .social-connect-butt {background-color:#3b5998;}
-#gp .social-connect-butt {background-color:#dd4b39;}
-#pi .social-connect-butt {background-color:#cb2027;}
-#li .social-connect-butt {background-color:#007bb6;}
-#rd .social-connect-butt {background-color:#CEE3F8;}
-#tm .social-connect-butt {background-color:#32506d;}
-
-.header-text{
-	font-size: 20px;
-	color: rgb(0, 0, 0);
-	font-weight: 200;
-	width: 70%;
-	background-color: white;
-	padding: 5px;
-	margin: 0 auto;
-	text-align: center;
-}
-
-.image-head{
-	width: 30%;
-}
-
-.developer-text{
-	font-family: 'Pacifico', cursive;
-	position: fixed;
-	text-align: center;
-	bottom: 0;
-	right: 5px;
-}
-
-#hastag-search .input-group-addon{
-  border: none;
-  background-color: rgb(47, 139, 186);
-  border-top-left-radius: 6px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 6px;
-  color: white;
-  font-size: 30px;
-  font-weight: 900;
-}
-
-#hastag-search #instant_search{
-  min-height: 45px;
-  /* border-radius: 6px; */
-  background-color: rgb(47, 139, 186);
-  border-top-left-radius: 0;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-  border: none;
-  border-bottom-left-radius: 0;
-  color: white;
-  font-size: 20px;
-  font-weight: 900;
-  font-family: sans-serif;
-}
-
-@media screen and (max-width: 720px)  {
-	.image-head{
-		width: 70%;
-	}	
-}
-
-@media screen and (max-width: 480px) {
-	.image-head{
-		width: 100%;
-	}	
-}
-
